--- a/Edit.form
+++ b/Edit.form
@@ -107,6 +107,9 @@
     <Component class="javax.swing.JTextField" name="titleField">
     </Component>
     <Component class="javax.swing.JTextField" name="yearField">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JRadioButton" name="imported">
       <Properties>
